Bug fixes in Seeder for cities and VAT sifixes. Also in ClientCompanyCreateView

--- a/BiEsPro.Web/BiEsPro.Web.csproj
+++ b/BiEsPro.Web/BiEsPro.Web.csproj
@@ -19,4 +19,10 @@
     <ProjectReference Include="..\BiEsPro.Services\BiEsPro.Services.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Models\BindingMoldels\ClientCompany\" />
+    <Folder Include="Models\ViewModels\ClientCompany\" />
+  </ItemGroup>
+
 </Project>
