--- a/BiEsPro.Services/BiEsPro.Services.csproj
+++ b/BiEsPro.Services/BiEsPro.Services.csproj
@@ -1,15 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Automapper\" />
+    <Compile Remove="Automapper\**" />
+    <EmbeddedResource Remove="Automapper\**" />
+    <None Remove="Automapper\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="8.1.1" />
+
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
   </ItemGroup>
 
