--- a/BiEsPro.Services/BiEsPro.Services.csproj
+++ b/BiEsPro.Services/BiEsPro.Services.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
 
+    <PackageReference Include="AutoMapper" Version="8.1.1" />
+
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
   </ItemGroup>
 
